--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-23 17:25:39
-# Total rules: 12422
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-24 10:25:54
+# Total rules: 12499
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -1050,6 +1050,7 @@
 .a5607107806887936.cdn.optimizely.com
 .a5624231270.cdn.optimizely.com
 .a5641440198393856.cdn.optimizely.com
+.a5641775847571456.cdn.optimizely.com
 .a5676741851611136.cdn.optimizely.com
 .a5682015752683520.cdn.optimizely.com
 .a5682661843271680.cdn.optimizely.com
@@ -1196,7 +1197,9 @@
 .abtest-ch.snssdk.com
 .abtest-va-tiktok.byteoversea.com
 .abtest.alibaba.com
+.abtest3-misc-hl.zijieapi.com
 .abtest3-misc-lf.zijieapi.com
+.abtest3-misc-lq.zijieapi.com
 .ac.dun.163.com
 .ac.dun.163yun.com
 .ac.o2.qq.com
@@ -1389,6 +1392,7 @@
 .adashx.m.taobao.com
 .adashx.ut.alibaba.com
 .adashx.ut.amap.com
+.adashx.ut.cainiao.com
 .adashx.ut.dingtalk.com
 .adashx.ut.ele.me
 .adashx.ut.hzshudian.com
@@ -1480,6 +1484,7 @@
 .admonitor.thepaper.cn
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
+.adn.ebay.com
 .adncdnend.azureedge.net
 .adnet.qq.com
 .adnet.sohu.com
@@ -1537,6 +1542,7 @@
 .ads-img-qc.xhscdn.com
 .ads-img.mozilla.org
 .ads-jp.tiktok.com
+.ads-manager-creatives-prod.s3.amazonaws.com
 .ads-marketing-vivofs.vivo.com.cn
 .ads-monitoring.papegames.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
@@ -1584,6 +1590,7 @@
 .ads.corp.yahoo.com
 .ads.csdn.net
 .ads.cup.com.cn
+.ads.ebay.com
 .ads.economist.com
 .ads.eu.msn.com
 .ads.facebook.com
@@ -1633,6 +1640,7 @@
 .ads.telegram.org
 .ads.test.netflix.com
 .ads.tiktok.com
+.ads.twitch.tv
 .ads.twitter.com
 .ads.uc.cn
 .ads.unity3d.com
@@ -1671,6 +1679,7 @@
 .ads5-normal.zijieapi.com
 .adsafeprotected.com
 .adsapi.manhuaren.com
+.adsbdfs.heytapimage.com
 .adsc.wasu.tv
 .adscaspion.appspot.com
 .adscdn.baidu.com
@@ -1866,6 +1875,7 @@
 .agent-proxy.baidu.com
 .agent.sj.qq.com
 .agentlayer-xyz.pages.dev
+.agility.cnn.com
 .agoo-report.m.taobao.com
 .agoodm.m.taobao.com
 .agoodm.wapa.taobao.com
@@ -2046,6 +2056,7 @@
 .analytics.datatables.net
 .analytics.de.algolia.com
 .analytics.dev.azure.com
+.analytics.developer.riotgames.com
 .analytics.disneyplus.com
 .analytics.dv.socure.io
 .analytics.ecosia.org
@@ -2070,6 +2081,7 @@
 .analytics.kaltura.com
 .analytics.live.com
 .analytics.lon.appsvc.an.adobe.com
+.analytics.m7g.twitch.tv
 .analytics.macpaw.com
 .analytics.mall.yahoo.com
 .analytics.map.qq.com
@@ -2624,6 +2636,7 @@
 .bench.uc.cn
 .beneplace.com.data.adobedc.net
 .bes-mtj.baidu.com
+.best-robux-40k-robux-roblox.blogspot.com
 .bestpush.pconline.com.cn
 .beyondwickedmapping.org
 .bfp.global.dual.dotomi.weighted.com.akadns.net
@@ -2838,6 +2851,7 @@
 .c.uaa.iqiyi.com
 .c.uk.msn.com
 .c.wired.com
+.c.xbox.com
 .c.yes.youku.com
 .c.za.msn.com
 .c0.ifengimg.com
@@ -3056,6 +3070,7 @@
 .clicktale.net
 .clickua200.pp.ua
 .client-api.ele.me
+.client-event-reporter.twitch.tv
 .client-pixel.groww.in
 .client.baidu.com
 .client.optimizely.com
@@ -3126,6 +3141,7 @@
 .cname-sin01-stsdk09.vivoglobal.com
 .cnbj1.fds.api.xiaomi.com
 .cnc-ad-script-uncached.b-cdn.net
+.cnn.dyn.cnn.com
 .cnzz.com
 .co-cota.vivoglobal.com
 .co-domaincfg.vivoglobal.com
@@ -3152,6 +3168,7 @@
 .collection-endpoint-staging.herokuapp.com
 .collector-a.px-cloud.net
 .collector-cdn.github.com
+.collector-dev.cdp-dev.cnn.com
 .collector-llmguu4m5a-ew.a.run.app
 .collector-px0176bdqs.px-cloud.net
 .collector-px01tqr7z5.px-cloud.net
@@ -3257,6 +3274,7 @@
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
+.collector-pxbgcvoikz.px-cloud.net
 .collector-pxbj5oofe8.px-cloud.net
 .collector-pxcfrcfefa.px-cloud.net
 .collector-pxckx6ilor.px-cdn.net
@@ -3408,6 +3426,7 @@
 .collector-pxn6kwgy36.px-cloud.net
 .collector-pxn8anl15k.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
+.collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
@@ -3419,6 +3438,7 @@
 .collector-pxo3vo1zw7.px-cloud.net
 .collector-pxo4bopf13.px-cloud.net
 .collector-pxo7xa8y7a.px-cloud.net
+.collector-pxo97ybh4j.px-cloud.net
 .collector-pxock1tfcy.px-cloud.net
 .collector-pxogckki0e.px-cloud.net
 .collector-pxogenisfh.px-cloud.net
@@ -3449,6 +3469,7 @@
 .collector-pxpvnjmp4g.px-cloud.net
 .collector-pxpvnjmp4g.pxchk.net
 .collector-pxpx6fss1c.px-cloud.net
+.collector-pxq2osncsa.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
 .collector-pxqerrwgji.px-cloud.net
 .collector-pxqm4ecyhh.px-cloud.net
@@ -3482,6 +3503,7 @@
 .collector-pxszbf5p84.px-cloud.net
 .collector-pxt1p5rban.px-cloud.net
 .collector-pxt6dy78t8.px-cloud.net
+.collector-pxt6hysu6b.px-cloud.net
 .collector-pxt8yg6fbv.px-cloud.net
 .collector-pxtafvwz61.px-cloud.net
 .collector-pxtfwrrc9p.px-cloud.net
@@ -3517,7 +3539,9 @@
 .collector-pxvlufj7uv.px-cloud.net
 .collector-pxvlufj7uv.pxchk.net
 .collector-pxvnpbbfwe.px-cloud.net
+.collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
+.collector-pxvusaqeck.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
 .collector-pxwbxurdun.px-cdn.net
@@ -3525,6 +3549,7 @@
 .collector-pxwh4atb0o.px-cloud.net
 .collector-pxwjdtmg7v.px-cloud.net
 .collector-pxwn0gh9ab.px-cloud.net
+.collector-pxwrwzgcun.px-cloud.net
 .collector-pxww4i4rc6.px-cloud.net
 .collector-pxwxsron7t.px-cloud.net
 .collector-pxx9lbctpg.px-cloud.net
@@ -3571,6 +3596,7 @@
 .collector.azure.cn
 .collector.bsg.brave.com
 .collector.bsg.bravesoftware.com
+.collector.cdp.cnn.com
 .collector.dcdn.baidu.com
 .collector.github.com
 .collector.polarr.co
@@ -3639,6 +3665,7 @@
 .content-analyticsdata.googleapis.com
 .content-analyticsreporting.googleapis.com
 .content-marketing-company.kit.com
+.content-understand-strategy.sm.cn
 .content.rconfig.qq.com
 .content.yieldmanager.edgesuite.net
 .contentpass.net
@@ -3762,6 +3789,7 @@
 .crs-hometab-event.line.me
 .crs.baidu.com
 .crwdcntrl.net
+.crystal.ns.cloudflare.com
 .cryweb.github.io
 .cs-feige.iqiyi.com
 .cs.mbgame.gamesafe.qq.com
@@ -3784,6 +3812,7 @@
 .cuocthiianhdepthieunhii2025.weebly.com
 .curiosity-seven.vercel.app
 .current.sina.com.cn
+.customad.cnn.com
 .customer.io
 .customerevents.dradis.netflix.com
 .customerevents.eu-west-1.internal.dradis.netflix.com
@@ -5800,6 +5829,7 @@
 .dm.bytedance.com
 .dm.pstatp.com
 .dm.toutiao.com
+.dm.video.weibocdn.com
 .dm0acvguygm9h.cloudfront.net
 .dm0ly9ibqkdxn.cloudfront.net
 .dm0t14ck8pg86.cloudfront.net
@@ -6149,6 +6179,7 @@
 .ecpm.tanx.com
 .edge.adobedc.net
 .edgecast-vod.yimg.com
+.edgetrksvc.ebay.com
 .edigitalsurvey.com
 .edith-seb.xiaohongshu.com
 .eduad.baidu.com
@@ -6213,6 +6244,7 @@
 .ep2x3kiawg-sdk.rum.aliyuncs.com
 .ep7.facebook.com
 .epic-matomo-prd-fxccc0gmebhpdjgh.z01.azurefd.net
+.epnt.ebay.com
 .epoch-id.cdo.heytapmobi.com
 .epowernetworktrackerimages.s3.amazonaws.com
 .epro.sogou.com
@@ -6386,6 +6418,7 @@
 .falabella.data.adobedc.net
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
+.fan.twitch.tv
 .fanatics.com.data.adobedc.net
 .fanaticscommerce.com.data.adobedc.net
 .fans.m.tmall.com
@@ -6533,6 +6566,7 @@
 .fpcdn.io
 .fpjs.io
 .fpt.commerce.adobe.com
+.fpt.dfp.microsoft.com
 .fpt.microsoft.com
 .fptls.com
 .fr-api.xmpush.global.xiaomi.com
@@ -6638,6 +6672,7 @@
 .gds.alibabadns.com
 .gdt.qq.com
 .gdtimg.com
+.gdyn.cnn.com
 .gecko-hl.snssdk.com
 .gecko-lq.snssdk.com
 .gecko-pangle-hl.snssdk.com
@@ -6825,6 +6860,7 @@
 .gz.apigw.tencentcs.com
 .h-adashx.ut.alibaba.com
 .h-adashx.ut.amap.com
+.h-adashx.ut.cainiao.com
 .h-adashx.ut.dingtalk.com
 .h-adashx.ut.hzshudian.com
 .h-adashx.ut.taobao.com
@@ -6886,6 +6922,7 @@
 .health-metrics-api.setapp.com
 .healthcareservicecorporation.data.adobedc.net
 .healthdata.hicloud.com
+.healthguides.cnn.com
 .hector.baidu.com
 .hectorstatic.baidu.com
 .hello-chat-c47ad-default-rtdb.firebaseio.com
@@ -6994,6 +7031,7 @@
 .hm2wjuuus3.execute-api.ap-northeast-1.amazonaws.com
 .hme-live-loganalytics-namespace.servicebus.windows.net
 .hmma.baidu.com
+.ho-mobile.it.data.adobedc.net
 .hog.crowdin.com
 .home.compete.com.edgesuite.net
 .homeborn.cn
@@ -7075,6 +7113,7 @@
 .hydra.alibaba.com
 .hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
+.hyperliquid-co.gitbook.io
 .hz-telemetry.adobe.io
 .hz.youku.com
 .i-cmg-amlg-prod.appspot.com
@@ -7288,6 +7327,7 @@
 .indianetouristvisacoin.wordpress.com
 .industriousthemselvestan.com
 .inf.miui.com
+.infinity-ground.gitbook.io
 .infinityid.condenastdigital.com
 .info-fsi.stanford.edu
 .info.3g.qq.com
@@ -7367,6 +7407,7 @@
 .ipv4.music.163.com
 .ipv6.kg.qq.com
 .ipv6.music.163.com
+.ir-sdk.dun.163.com
 .ir.mail.163.com
 .iriscoremetadataprod.blob.core.windows.net
 .irpmt.mail.163.com
@@ -7647,6 +7688,7 @@
 .libfre.obs.cn-east-3.myhuaweicloud.com
 .libs.baidu.com
 .life.html5.qq.com
+.lightning.cnn.com
 .lingnan.asia.qualtrics.com
 .link.medium.com
 .link.reuters.com
@@ -8190,6 +8232,7 @@
 .metrics-mgr.ds.unity3d.com
 .metrics.accuweather.com
 .metrics.adobe.com
+.metrics.aem.playstation.com
 .metrics.aeon.co
 .metrics.agent.datadoghq.com
 .metrics.apple.com
@@ -8199,11 +8242,13 @@
 .metrics.brave.com
 .metrics.bravesoftware.com
 .metrics.brightcove.com
+.metrics.cnn.com
 .metrics.coindesk.com
 .metrics.crunchyroll.com
 .metrics.cursor.sh
 .metrics.dashboard.unity3d.com
 .metrics.elsevier.com
+.metrics.eu.playstation.com
 .metrics.gitlab.com
 .metrics.harley-davidson.com
 .metrics.hbr.org
@@ -8228,8 +8273,10 @@
 .metrics.sciencedirect.com
 .metrics.stanford.edu
 .metrics.taobao.com
+.metrics.target.com
 .metrics.ted.com
 .metrics.theatlantic.com
+.metrics.us.playstation.com
 .metrics.walmart.com
 .metrics.zacks.com
 .metrika.yandex.ru
@@ -8300,6 +8347,7 @@
 .mm10mkavnh.data.adobedc.net
 .mmgame.qpic.cn
 .mmonitor.cc.163.com
+.mms.cnn.com
 .mms.lifehacker.com
 .mn.qwant.com
 .mnaspm.com
@@ -8333,6 +8381,7 @@
 .mobilem.360.cn
 .mobilemsg.youku.com
 .mobileservice.cn
+.mobiletelemetry.ebay.com
 .mobojoy.baidu.com
 .mobondhrd.appspot.com
 .mobopay.baidu.com
@@ -8373,6 +8422,7 @@
 .monitor-stsdk.vivo.com.cn
 .monitor-stsdk.vivoglobal.com
 .monitor.azure.com
+.monitor.ebay.com
 .monitor.geetest.com
 .monitor.music.qq.com
 .monitor.qq.com
@@ -8381,6 +8431,7 @@
 .monorail-edge.shopifysvc.com
 .monsetting.toutiao.com
 .morganstanleyandcollc.data.adobedc.net
+.mos.m.taobao.com
 .mosaicone-lb-telemetry-prod-56a065490ca45ae3.elb.us-east-1.amazonaws.com
 .mostat.wps.cn
 .mountain.zhidao.baidu.com
@@ -8653,6 +8704,7 @@
 .o.fandango.com
 .o.medallia.com
 .o.phb123.com
+.o.xbox.com
 .o2.ycpi.vip.gq1.yahoo.com
 .o2o-ad-dev.oss-cn-shanghai.aliyuncs.com
 .o2o-ad-log-gateway.alibaba.com
@@ -8804,6 +8856,7 @@
 .p.hentaiforce.net
 .p.imgur.com
 .p.kugou.com
+.p.placed.com
 .p.reuters.com
 .p.sandbox.sardine.ai
 .p.sardine.ai
@@ -9161,6 +9214,7 @@
 .press2dori-safe.obs.la-south-2.myhuaweicloud.com
 .preview.crm.sms.miui.com
 .preview.msn.com
+.preview.webflow.com
 .prexyone.appspot.com
 .prgm.b-cdn.net
 .primis.tech
@@ -9201,6 +9255,7 @@
 .protect.dev.sec.intl.miui.com
 .protectsurf-a.akamaihd.net
 .providence.voxmedia.com
+.proxima.midjourney.com
 .proxy-mob-cld.alicdn.com
 .proxy-skadnetwork.apple.com
 .proxy4http.appspot.com
@@ -9242,6 +9297,7 @@
 .puds.ucweb.com
 .pull.mitv.pandora.xiaomi.com
 .pull.push.sogou.com
+.pulsar.ebay.com
 .pulseapp-24x7-service.github.io
 .puma-api.iqiyi.com
 .puma.api.iqiyi.com
@@ -10034,6 +10090,7 @@
 .server-side-tagging-764336538604.europe-west2.run.app
 .server-side-tagging-76sqkbyogq-uc.a.run.app
 .server-side-tagging-773543190699.us-central1.run.app
+.server-side-tagging-77718534706.us-central1.run.app
 .server-side-tagging-77qbstexka-uc.a.run.app
 .server-side-tagging-795003655167.us-east5.run.app
 .server-side-tagging-7azaok6q5q-uc.a.run.app
@@ -10226,6 +10283,7 @@
 .server-side-tagging-ilpwo4qjua-uc.a.run.app
 .server-side-tagging-imhawucm2q-uc.a.run.app
 .server-side-tagging-inyx6xoxpa-uc.a.run.app
+.server-side-tagging-ioedcetjqa-uc.a.run.app
 .server-side-tagging-ioefw25sma-uc.a.run.app
 .server-side-tagging-iqvjh4jm4q-uc.a.run.app
 .server-side-tagging-irsgboekxa-uc.a.run.app
@@ -10287,6 +10345,7 @@
 .server-side-tagging-lxwfwdlp7q-ue.a.run.app
 .server-side-tagging-ly5bolfzlq-uc.a.run.app
 .server-side-tagging-lzwk2fx32a-uc.a.run.app
+.server-side-tagging-m564iy75hq-uc.a.run.app
 .server-side-tagging-maafcqllza-uc.a.run.app
 .server-side-tagging-mb2z4fodua-uc.a.run.app
 .server-side-tagging-mbtzbqvz5q-uc.a.run.app
@@ -10329,6 +10388,7 @@
 .server-side-tagging-oh37ak3tfq-uc.a.run.app
 .server-side-tagging-oj6mtecqpq-uc.a.run.app
 .server-side-tagging-okdnqmrjrq-uc.a.run.app
+.server-side-tagging-oqa72bcbbq-uc.a.run.app
 .server-side-tagging-or5jarxr6a-uc.a.run.app
 .server-side-tagging-orabrkodiq-uc.a.run.app
 .server-side-tagging-osdtlk4sca-uc.a.run.app
@@ -10606,6 +10666,7 @@
 .shell.data.adobedc.net
 .shence-import.smzdm.com
 .shenghuo.xiaomi.com
+.sherlock-events-sampler.ebay.com
 .shgcdn3.com
 .shoes.app-xae.xiaomi.com
 .shop.pandora.xiaomi.com
@@ -10669,11 +10730,14 @@
 .smblock.s3.amazonaws.com
 .smetrics-cns.panasonic.com
 .smetrics-stg.help.disneyplus.com
+.smetrics.aem.playstation.com
 .smetrics.afpjobs.amazon.com
 .smetrics.bestbuy.com
 .smetrics.cfainstitute.org
+.smetrics.cnn.com
 .smetrics.digicert.com
 .smetrics.elsevier.com
+.smetrics.eu.playstation.com
 .smetrics.flex.amazon.co.jp
 .smetrics.flex.amazon.com
 .smetrics.harley-davidson.com
@@ -10693,6 +10757,8 @@
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
 .smetrics.sciencedirect.com
+.smetrics.target.com
+.smetrics.us.playstation.com
 .smetrics.verisign.com
 .smetrics.walmart.com
 .smi.pp.ua
@@ -10747,6 +10813,7 @@
 .sp1.baidu.com
 .sp2.baidu.com
 .sp3.baidu.com
+.spade.twitch.tv
 .spcode.baidu.com
 .specific-sample-orderline.vercel.app
 .speedcurve.com
@@ -11159,6 +11226,8 @@
 .telem-edge.smartscreen.microsoft.com
 .telemetrics.klaviyo.com
 .telemetry-app.groww.in
+.telemetry-cii.api.playstation.com
+.telemetry-console.api.playstation.com
 .telemetry-coverage.mozilla.org
 .telemetry-coverage.r53-2.services.mozilla.com
 .telemetry-data.r53-2.services.mozilla.com
@@ -11166,9 +11235,11 @@
 .telemetry-stevedore.confluence.api.staging.dashboard.unity3d.com
 .telemetry-stevedore.unity3d.com
 .telemetry-update.endpointcache.workers.dev
+.telemetry-web.api.playstation.com
 .telemetry.adblockplus.org
 .telemetry.adobe.io
 .telemetry.algolia.com
+.telemetry.api.playstation.com
 .telemetry.bowflex.com
 .telemetry.business.githubcopilot.com
 .telemetry.canva.com
@@ -11331,6 +11402,7 @@
 .tnc31-platform-useast2a.tiktokv.com
 .tnc58-platform-ycru.tiktokv.com
 .tne.pinduoduo.com
+.tnegadge.s3.amazonaws.com
 .tns.simba.taobao.com
 .tob-cms.bj.bcebos.com
 .tob-tracker.yximgs.com
@@ -11598,6 +11670,7 @@
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
+.ug.baidu.com
 .ug.snssdk.com
 .ugcbrainient-a.akamaihd.net
 .ugcup.music.qq.com
@@ -11863,6 +11936,7 @@
 .vi.xiaohongshu.com
 .via.intercom.io
 .viagra-pill.blogspot.com
+.victory.cnn.com
 .vidazoo.com
 .video-ad.sm.cn
 .video-analytics-api.cloudinary.com
@@ -11919,6 +11993,7 @@
 .voyadoanalytics.azurewebsites.net
 .vp.html5.qq.com
 .vpic.video.qq.com
+.vs.target.com
 .vsblobprodscussu5shard66.blob.core.windows.net
 .vsh.pp.ua
 .vstat.my.tv.sohu.com
@@ -12123,6 +12198,7 @@
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
 .www.addtoany.com
+.www.i.cdn.cnn.com
 .www.info.redhat.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
@@ -12260,6 +12336,7 @@
 .yx.lenovomm.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .z-p3-api.facebook.com
+.z.cdp-dev.cnn.com
 .z.m.tv.sohu.com
 .zasc-cota.vivoglobal.com
 .zasc-vcode-od.vivoglobal.com
