--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-24 10:25:54
-# Total rules: 12499
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-24 22:16:18
+# Total rules: 12515
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -33,6 +33,7 @@
 .1675450967.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1hlahoc4rpc-sdk.rum.aliyuncs.com
+.1jk5qcsjzo.data.adobedc.net
 .1l-hit.mail.ru
 .1l-view.mail.ru
 .1oavsblobprodcus350.blob.core.windows.net
@@ -1093,6 +1094,7 @@
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
 .a6303072515784704.cdn.optimizely.com
+.a6371731711983616.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
 .a6403762990874624.cdn.optimizely.com
@@ -1541,6 +1543,7 @@
 .ads-img-bak.xhscdn.com
 .ads-img-qc.xhscdn.com
 .ads-img.mozilla.org
+.ads-impression.papegames.com
 .ads-jp.tiktok.com
 .ads-manager-creatives-prod.s3.amazonaws.com
 .ads-marketing-vivofs.vivo.com.cn
@@ -1890,6 +1893,7 @@
 .aid.video.qq.com
 .aidacruisesgerman.data.adobedc.net
 .aidsvc.netflix.com
+.aihuishou.com
 .airbnb-pi-three.vercel.app
 .aircanada.data.adobedc.net
 .airlytics.airlock.twcmobile.weather.com
@@ -2079,6 +2083,7 @@
 .analytics.innologica.com
 .analytics.itunes.apple.com
 .analytics.kaltura.com
+.analytics.lib.duke.edu
 .analytics.live.com
 .analytics.lon.appsvc.an.adobe.com
 .analytics.m7g.twitch.tv
@@ -2187,6 +2192,7 @@
 .anon-stats.eff.org
 .anonymous-analytics.tonkeeper.com
 .anquan.baidu.com
+.ansys.com.data.adobedc.net
 .anti-adblock.herokuapp.com
 .anti-bot.baidu.com
 .anti-sdk-ccs.m.jd.com
@@ -2961,6 +2967,7 @@
 .cdnweb3.pages.dev
 .cdp.cloud.unity.cn
 .cdp.cloud.unity3d.com
+.cdxcfvgh.s3.eu-north-1.amazonaws.com
 .ced-ns.sascdn.com
 .ced.sascdn.com
 .cedarssinaimedicalcenter.data.adobedc.net
@@ -3100,6 +3107,7 @@
 .cloudpush.iqiyi.com
 .clpl-analytics-prod.s3.ap-southeast-1.amazonaws.com
 .cltgtstor001.blob.core.windows.net
+.clydesdalebank.data.adobedc.net
 .cm.ad.gifshow.com
 .cm.baidu.com
 .cm.bilibili.com
@@ -8809,6 +8817,7 @@
 .optimus-ads.amap.com
 .optimus-ads.amap.com.w.alikunlun.com
 .optnmnstr.com
+.optum.com.data.adobedc.net
 .optumrx.data.adobedc.net
 .orange-dc.youku.com
 .orbit.jd.com
@@ -8838,6 +8847,7 @@
 .ott.v1.data.mgtv.com
 .ott.video.qq.com
 .ottl7-l2.pandora.xiaomi.com
+.oupar5ykmi.data.adobedc.net
 .ourdreamstaticpages.pages.dev
 .ourtime-assist.members-authenticated.workers.dev
 .outbrain.map.fastly.net
@@ -9823,6 +9833,7 @@
 .scripts.dkmedia.vercel.app
 .scv-blog.io.naver.com
 .scv-cafe.io.naver.com
+.scv-game.io.naver.com
 .sd-tagging.azurefd.net
 .sdac.lenovomm.com
 .sdata.wiley.com
@@ -10802,6 +10813,7 @@
 .sorteiosbrasil.netlify.app
 .soul-ad.soulapp.cn
 .soup.v.qq.com
+.southernco.data.adobedc.net
 .sovetnik.market.yandex.ru
 .soxnwz.lg.com
 .sp-mms.weather.com
@@ -11098,6 +11110,7 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
+.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
@@ -11995,6 +12008,7 @@
 .vpic.video.qq.com
 .vs.target.com
 .vsblobprodscussu5shard66.blob.core.windows.net
+.vsblobprodscussu5shard82.blob.core.windows.net
 .vsh.pp.ua
 .vstat.my.tv.sohu.com
 .vstat.v.blog.sohu.com
@@ -12069,6 +12083,7 @@
 .weather-analytics-events.news.apple-dns.net
 .web-ivcbrasil-pixel.s3.us-west-2.amazonaws.com
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
+.web-metrica.yandex.ru
 .web-mon-useast2a.byteoversea.com
 .web-player-tracker.biliapi.net
 .web-security-reports.services.atlassian.com
@@ -12340,6 +12355,7 @@
 .z.m.tv.sohu.com
 .zasc-cota.vivoglobal.com
 .zasc-vcode-od.vivoglobal.com
+.zau9tq0po5.data.adobedc.net
 .zbcy.snssdk.com
 .zconfig.alibabausercontent.com
 .zconfig.alibabausercontent.com.w.cdngslb.com
