--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-26 14:26:02
-# Total rules: 12478
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-26 17:27:02
+# Total rules: 12499
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -1481,6 +1481,7 @@
 .adobe-dns.adobe.com
 .adobe.com.data.adobedc.net
 .adobe.data.adobedc.net
+.adobe.io
 .adobecorp.data.adobedc.net
 .adobemetrics.auth0.com
 .adobemobiledev.data.adobedc.net
@@ -1905,6 +1906,7 @@
 .ali-p2p.pull.yximgs.com
 .ali-web-player-tracker.biliapi.net
 .ali2.a.yximgs.com
+.alibaba-inc.kefu.helps.live
 .alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
 .alimelog.taobao.com
@@ -2010,7 +2012,6 @@
 .analytics.95516.com
 .analytics.adjust.world
 .analytics.adobe.com
-.analytics.adobe.io
 .analytics.aeon.co
 .analytics.afirstsoft.cn.cdn.cloudflare.net
 .analytics.ahrefs.com
@@ -2889,7 +2890,6 @@
 .cbjslog.baidu.com
 .cbsinteractive.data.adobedc.net
 .cbu01.alicdn.com
-.cc-api-data.adobe.io
 .cc.m.jd.com
 .cc.map.qq.com
 .ccc-x.jd.com
@@ -5533,7 +5533,6 @@
 .dbujksp6lhljo.cloudfront.net
 .dbw7j2q14is6l.cloudfront.net
 .dby7kx9z9yzse.cloudfront.net
-.dc-genai-access-provisioning-api.adobe.io
 .dc.applicationinsights.azure.cn
 .dc.csdn.net
 .dc.di.atlas.samsung.com
@@ -6325,6 +6324,7 @@
 .expendablekmr.kugou.com
 .expendablekmrcdn.kugou.com
 .expendablekmrcdnretry.kugou.com
+.expenses-fe.meituan.com
 .experiments.apple.com
 .expeva.store.qq.com
 .express-met-vgwort-de.cdn.ampproject.org
@@ -7036,6 +7036,7 @@
 .httpdns.qcloud.com
 .httpdnsvip.meituan.com
 .httpfereport.jd.com
+.httpizza.ele.me
 .httpring.qq.com
 .https-filtering-check.adtidy.org
 .httpsdns.baidu.com
@@ -7074,7 +7075,6 @@
 .hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
 .hyperliquid-co.gitbook.io
-.hz-telemetry.adobe.io
 .hz.youku.com
 .i-cmg-amlg-prod.appspot.com
 .i-cn01a.ocloud.heytapmobi.com
@@ -7449,6 +7449,7 @@
 .jqcdn03.herokuapp.com
 .jqcdn2.herokuapp.com
 .jqmt.qq.com
+.jr.airstarfinance.net
 .jrad.jd.com
 .jrclick.jd.com
 .js-ad.a.yximgs.com
@@ -7866,6 +7867,7 @@
 .log77-normal-c-useast1a.tiktokv.com
 .log9-normal-c-useast1a.tiktokv.com
 .logagent-rum-292398709.cn-north-1.elb.amazonaws.com.cn
+.logan.sankuai.com
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.tv.naver.com
@@ -7942,6 +7944,7 @@
 .lon-col.eum-appdynamics.com
 .long.weixin.qq.com
 .look-like-star.myshopify.com
+.look.163.com
 .lookblock.pages.dev
 .lp.americas.business.samsung.com
 .lp.apac.business.samsung.com
@@ -8055,6 +8058,7 @@
 .mailmunch.s3.amazonaws.com
 .maliva-mcs-useast2a.byteoversea.com
 .maliva-mcs.byteoversea.com
+.mall.10010.cn
 .mall.csdn.net
 .mam.netease.com
 .mam6.netease.com
@@ -8262,6 +8266,7 @@
 .micloudevents.preview.n.xiaomi.com
 .microchip.data.adobedc.net
 .microchromejapan.b-cdn.net
+.microfin.ele.me
 .microsoft.devq.workers.dev
 .middycdn-a.akamaihd.net
 .miehuo-img-1258238960.cos.ap-hongkong.myqcloud.com
@@ -8495,6 +8500,8 @@
 .mtj.baidu.com
 .mtrace.play.cp81.ott.cibntv.net
 .mtrace.qq.com
+.mtvod-ali.meituan.net
+.mtvod.meituan.net
 .mujib-store28.blogspot.com
 .multi-az-ad.kuaishou.cn
 .multi-az-ulog.gifshow.com
@@ -8575,6 +8582,7 @@
 .netlify-rum.netlify.app
 .new-adtest.pages.dev
 .new-rutor.eu.org
+.newbuy.chinaunicom.cn
 .newclient.map.baidu.com
 .newkste01a8f.s3.amazonaws.com
 .newkste05836.s3.amazonaws.com
@@ -9072,6 +9080,7 @@
 .pinksales-pools.pages.dev
 .pipe.aria.microsoft.com
 .pipedream.wistia.com
+.pipi.cn
 .piwik.fsfe.org
 .piwik.openstreetmap.org
 .piwik.pcgamingwiki.com
@@ -9690,6 +9699,7 @@
 .rum.us-east-2.amazonaws.com
 .rum.us-west-1.amazonaws.com
 .rum.us-west-2.amazonaws.com
+.rumt-sg.com
 .rumt-zh.com
 .run-server-side-tagging-t3s332nvca-el.a.run.app
 .runningapplications-b7dae-default-rtdb.firebaseio.com
@@ -11212,7 +11222,6 @@
 .telemetry-update.endpointcache.workers.dev
 .telemetry-web.api.playstation.com
 .telemetry.adblockplus.org
-.telemetry.adobe.io
 .telemetry.algolia.com
 .telemetry.api.playstation.com
 .telemetry.bowflex.com
@@ -11924,7 +11933,9 @@
 .video-api.yql.yahoo.com
 .video-dsp.pddpic.com
 .video-stats.video.google.com
+.video-zb.cloudvideocdn.taobao.com
 .video.dispatch.tc.qq.com
+.video.goofish.com
 .video.kts.g.mi.com
 .video.market.xiaomi.com
 .video231.oss-cn-beijing.aliyuncs.com
@@ -12387,6 +12398,7 @@ banners.itunes.apple.com
 cartoonapi.uc.cn
 cm-10-138.getui.com
 cms.uc.cn
+contents.meituan.com
 coral.uc.cn
 cr-status.iqiyi.com
 ddfs-public.ddimg.mobi
@@ -12395,8 +12407,10 @@ dns.iqiyi.com
 dns.m.sm.cn
 dns.wechat.com
 emoji.uc.cn
+epay.10010.com
 errlog.umeng.com
 feedback.uc.cn
+fyb-2.cdn.bcebos.com
 ggadoffline.miguvideo.com
 ggic03.miguvideo.com
 ggmk.miguvideo.com
@@ -12419,8 +12433,13 @@ img.da.mgtv.com
 imgadpai.thepaper.cn
 lc.map.baidu.com
 lf9-cdn-tos.bytegecko.com
+loan-supermarket.faas.ele.me
+locationhistory-pa.googleapis.com
+locationhistoryaggregates-pa.googleapis.com
+locationhistoryplacedetails-pa.googleapis.com
 log.mmstat.com
 lookup.api.bsb.baidu.com
+m.jr.mi.com
 mc.viglink.com
 mediation.adnxs.com
 mob.bz.mgtv.com
@@ -12438,6 +12457,7 @@ p.l.qq.com
 pgdt.ugdtimg.com
 pin.hpplay.cn
 proxy.safebrowsing.apple
+push.12306.cn
 qa.viglink.com
 qwapi.apple.com
 qzs.gdtimg.com
@@ -12466,6 +12486,7 @@ udns.weixin.qq.com
 ulogs.umeng.com
 umessage-online-zb.uc.cn
 us.l.qq.com
+userlocation.googleapis.com
 v.uc.cn
 v2.da.mgtv.com
 video.da.mgtv.com
