--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-29 23:34:55
-# Total rules: 10162
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-30 10:06:46
+# Total rules: 10268
 
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
 .0a0d-d3l1vr.b-cdn.net
@@ -7,10 +7,12 @@
 .0lovespells0.blogspot.com
 .0m1hix10po.data.adobedc.net
 .0nvdw1kkeb.data.adobedc.net
+.0qnz8a68u0.data.adobedc.net
 .1.66law.cn
 .1.wps.cn
 .1000000satoshi.weebly.com
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .10btc.weebly.com
 .115776615-884492032168661957.preview.editmysite.com
 .1187531871.rsc.cdn77.org
@@ -84,6 +86,7 @@
 .7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
 .8035ugt-w34hrg-0hjwre-ghjew-r0hg-ehg9-h-rtg.obs.af-south-1.myhuaweicloud.com
+.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .86uk.com
 .888.tv.sohu.com
@@ -106,6 +109,7 @@
 .a.app.qq.com
 .a.baidu.com
 .a.cctv.com
+.a.cntv.cn
 .a.gsmarena.com
 .a.hcaptcha.com
 .a.hl.mi.com
@@ -774,6 +778,7 @@
 .ad.docer.wps.cn
 .ad.doubanio.com
 .ad.e.waimai.sankuai.com
+.ad.eporner.com
 .ad.eu.xiaomi.com
 .ad.fcbox.com
 .ad.gmw.cn
@@ -825,6 +830,7 @@
 .ad.zijieapi.com.w.cdngslb.com
 .ad.zui.com
 .ad1.baike.com
+.ad1.popcap.com
 .ad1.sina.com.cn
 .ad1.xiaomi.com
 .ad2.sina.com.cn
@@ -834,6 +840,7 @@
 .ad5.sina.com.cn
 .ada.baidu.com
 .adaccount.csdn.net
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adasad.myweb.hinet.net
 .adash-c.m.taobao.com
@@ -1034,11 +1041,13 @@
 .ads.gq1.yahoo.com
 .ads.heytapmobi.com
 .ads.huawei.com
+.ads.hulu.com.edgesuite.net
 .ads.ign.com
 .ads.imgur.com
 .ads.linkedin.com
 .ads.mi.com
 .ads.microsoft.com
+.ads.morningstar.com
 .ads.mozilla.org
 .ads.msn.com
 .ads.music.126.net
@@ -1049,6 +1058,7 @@
 .ads.pinterest.com
 .ads.prd.ie.internal.unity3d.com
 .ads.privacy.qq.com
+.ads.pro-market.net.edgesuite.net
 .ads.prod.webservices.mozgcp.net
 .ads.reddit.com
 .ads.rmbl.ws.cdn.cloudflare.net
@@ -1084,6 +1094,7 @@
 .ads.yahoo.com
 .ads.yam.com
 .ads.yimg.com
+.ads.yimg.com.edgesuite.net
 .ads.youtube.com
 .ads.zaobao.com
 .ads01.pages.dev
@@ -1125,6 +1136,8 @@
 .adserver-1277986481.ap-northeast-1.elb.amazonaws.com
 .adserver-1964701068.eu-west-1.elb.amazonaws.com
 .adserver.bing.com
+.adserver.ign.com
+.adserver.softonic.com
 .adserver.yahoo.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
@@ -1254,6 +1267,7 @@
 .afd.baidu.com
 .afd.l.google.com
 .afdconf.baidu.com
+.affiliate.googleusercontent.com
 .affiliates.bhphotovideo.com
 .affiliationjs.s3.amazonaws.com
 .affiliatly.com
@@ -2055,6 +2069,7 @@
 .bshg.data.adobedc.net
 .bskyb.data.adobedc.net
 .bslivepull.qing.mgtv.com
+.bsnj.eyeblaster.akadns.net
 .bsrv.qq.com
 .btlaunch.baidu.com
 .btloader.com
@@ -2071,6 +2086,7 @@
 .business-ad.cdn-go.cn
 .business-api.tiktok.com
 .busuanzi.ibruce.info
+.buy-cheap-phentermine.blogspot.com
 .buysellads.com
 .bxtdlifzik.data.adobedc.net
 .by2.uservoice.com
@@ -2080,25 +2096,59 @@
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
 .c-nfa.jd.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.autohome.com.cn
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
 .c.fa.jd.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mcd.cn
 .c.microsoft.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
 .c.riskified.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.xbox.com
 .c.yes.youku.com
+.c.za.msn.com
 .c0.ifengimg.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
@@ -2182,6 +2232,7 @@
 .cdn.soulapp.cn
 .cdn.tanx.com
 .cdn.usefathom.com
+.cdn1sitescout.edgesuite.net
 .cdn3.cartoonporn.to
 .cdn3.optimizely.com
 .cdn5.cartoonporn.to
@@ -2224,6 +2275,8 @@
 .chat1.jd.com
 .chatenabled.mail.google.com
 .chatpush.miguvideo.com
+.cheap-web-hosting-here.blogspot.com
+.cheap-xanax-here.blogspot.com
 .cheezwhiz.z9.web.core.windows.net
 .chia-lan.pp.ua
 .chiafarm.pp.ua
@@ -2249,6 +2302,7 @@
 .citrixtelemetryeh.servicebus.windows.net
 .citrixtelemetryeheu-alias.servicebus.windows.net
 .citrixtelemetryeheu.servicebus.windows.net
+.citycash2.blogspot.com
 .cjhq.baidu.com
 .cjroq.bealge.sogou.com
 .cjs-diagnostics-office-com-gvdhgwfwbbfsd9g3.z01.azurefd.net
@@ -2347,6 +2401,7 @@
 .cmsjs.eastmoney.com
 .cmstool.youku.com
 .cmtw.pinduoduo.com
+.cmweb.ilike.alibaba.com
 .cmx.autohome.com.cn
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
@@ -2834,6 +2889,7 @@
 .creatopy-adtag-production.b-cdn.net
 .creditonebank.data.adobedc.net
 .credits.bz.mgtv.com
+.creditsoffer.blogspot.com
 .criteo.com
 .crl.microsoft.com
 .crlog-crcn.adobe.com
@@ -4409,6 +4465,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .deskwww.s3.amazonaws.com
 .detail.taobao.com
@@ -4694,6 +4751,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3fr5q4g2ul9.cloudfront.net
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
@@ -5147,6 +5205,7 @@
 .fingerprint-upload.hellobike.com
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
+.fioricet-online.blogspot.com
 .firebase.googleapis.com
 .firebasecrashlytics.googleapis.com
 .firebasedynamiclinks.googleapis.com
@@ -5184,6 +5243,7 @@
 .folkrbvi.pages.dev
 .footprint.network.cdn.cloudflare.net
 .foreign.coloros.com
+.forex-trading-benefits.blogspot.com
 .forms-emea.lenovo.com
 .forms.lenovo.com
 .forms.sonos.com
@@ -5341,6 +5401,9 @@
 .getsquarebannerads-6egeg2u34q-du.a.run.app
 .getui.com
 .getui.net
+.getyour5kcredits0.blogspot.com
+.getyourgiftnow2.blogspot.com
+.getyourgiftnow3.blogspot.com
 .gfonts.jifo.co
 .gg-ads.b-cdn.net
 .gg.google.com
@@ -5536,6 +5599,8 @@
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hiphotos.baidu.com
+.hir44.blogspot.com
+.hirszabadsag.blogspot.com
 .historytrade.com
 .hits.sinajs.cn
 .hits.theguardian.com
@@ -5703,6 +5768,7 @@
 .hybrid.miui.com
 .hybrid.xiaomi.com
 .hydra.alibaba.com
+.hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
 .hyperliquid-co.gitbook.io
 .hz.youku.com
@@ -5821,6 +5887,7 @@
 .img-bss.csdn.net
 .img-c.heytapimage.com
 .img-x.jd.com
+.img.alibaba.com
 .img.en25.com
 .img.gou.wpscdn.cn
 .img.im.alicdn.com
@@ -5891,6 +5958,7 @@
 .in.applicationinsights.azure.com
 .in.stat.mi.com
 .in.tv.global.mi.com
+.in.yimg.com
 .in.zhihu.com
 .incoming-data-sense360.s3.amazonaws.com
 .increaserev2.static-cloudflare.workers.dev
@@ -6078,6 +6146,7 @@
 .jun01.oss-cn-beijing.aliyuncs.com
 .jwpltx.com
 .jzapi.baidu.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -6102,12 +6171,14 @@
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
 .kic-ngfts.lge.com
+.kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
 .kjdsfjisdfjr23.azurewebsites.net
 .kjdvn1340-ads.blogspot.com
 .klclick1.com
+.klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .kmr.service.kugou.com
 .kmrcdn.service.kugou.com
@@ -6775,6 +6846,7 @@
 .mjca-yijws.global.ssl.fastly.net
 .ml314.com
 .mllog.jd.com
+.mlpoo11-secondary.z13.web.core.windows.net
 .mm10mkavnh.data.adobedc.net
 .mmgame.qpic.cn
 .mmonitor.cc.163.com
@@ -6804,6 +6876,7 @@
 .mobileapm.icbc.com.cn
 .mobileconfig.sascdn.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -6876,6 +6949,7 @@
 .mqtt.aliyuncs.com
 .mqtt.zhihu.com
 .ms.bdimg.com
+.ms.yandex.ru
 .msadsscale.azureedge.net
 .msadsscale.microsoft.com
 .msc.baidu.com
@@ -6887,6 +6961,7 @@
 .msg.mobile.kugou.com
 .msg.video.iqiyi.com
 .msg.youku.com
+.mshelp247.weebly.com
 .msite.baidu.com
 .mslfgl434.pages.dev
 .msmetrics.ws.sonos.com
@@ -7099,6 +7174,7 @@
 .nvm6zgsnhj.data.adobedc.net
 .nvmos.nvidia.com
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.fandango.com
 .o.medallia.com
 .o.phb123.com
@@ -7123,7 +7199,9 @@
 .ocbc.data.adobedc.net
 .oceanengine.com
 .odc.weather.com
+.odd-onead.cdn.hinet.net
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .offnavi.map.baidu.com
 .ofloc.map.baidu.com
@@ -7159,7 +7237,9 @@
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
 .onezapp.com
+.online-forex-trading-systems.blogspot.com
 .online-metrix.net
+.online-pharmacy-online.blogspot.com
 .onrt-stsdk.vivo.com.cn
 .onrt-stsdk.vivoglobal.com
 .onthe.io
@@ -7210,6 +7290,7 @@
 .os-mon.zijieapi.com
 .os.fandango.com
 .osc.webroot.com
+.osd-onead.cdn.hinet.net
 .osdkupdatenw.com
 .osfota.cdn.aliyun.com
 .osm-onead.cdn.hinet.net
@@ -7222,12 +7303,14 @@
 .otf.msn.com
 .oth.eve.qq.com
 .otk.pinduoduo.com
+.otpercpiheno.blogspot.com
 .ott.video.qq.com
 .oupar5ykmi.data.adobedc.net
 .ourdreamstaticpages.pages.dev
 .outbrain.map.fastly.net
 .outlookads.live.com
 .outreach.crossref.org
+.ox-d.hbr.org
 .p-l.play.cp81.ott.cibntv.net
 .p-log.ykimg.com
 .p-n.io
@@ -7365,6 +7448,7 @@
 .performance.squarespace.com
 .permutive.app
 .permutive.com
+.peter-north-cum-shot.blogspot.com
 .petitions.whitehouse.gov
 .petrolprices-advertising.s3.eu-west-2.amazonaws.com
 .pfp.sina.com.cn
@@ -7410,6 +7494,7 @@
 .pgtus3-excel-telemetry-vip.officeapps.live.com
 .pgtus3-powerpoint-telemetry-vip.officeapps.live.com
 .pgtus3-word-telemetry-vip.officeapps.live.com
+.pharmacy-news.blogspot.com
 .phonograph2.voxmedia.com
 .photovideo.photo.qq.com
 .phs.tanx.com
@@ -7428,6 +7513,7 @@
 .pingback.giphy.com
 .pingback.sogou.com
 .pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pinglun.qq.com
@@ -7539,6 +7625,7 @@
 .press2dori-safe.obs.la-south-2.myhuaweicloud.com
 .preview.msn.com
 .preview.webflow.com
+.prexyone.appspot.com
 .primis.tech
 .privacy-center.org
 .privacy.miui.com
@@ -7586,6 +7673,7 @@
 .ptelastaxo.com
 .pttptt.cc
 .puata.info
+.pub-251d6c694a0641dd9e95aeca9e3219e8.r2.dev
 .pub-549d59daefd74f7583e1766800fe7b07.r2.dev
 .pub-81f2b77f5bc841c5ae64221394d67f53.r2.dev
 .pub-algeriatenders.s3.eu-central-1.amazonaws.com
@@ -7711,6 +7799,7 @@
 .r.release.qq.com
 .r.sascdn.com
 .r.skimresources.com
+.r.turn.com.akadns.net
 .r0.mail.ru
 .r1.visualwebsiteoptimizer.com
 .r1.ykimg.com
@@ -7723,9 +7812,11 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
 .raka.bing.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
@@ -7830,6 +7921,7 @@
 .rich.qq.com
 .richaudience.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .rightmessage.com
 .riskct.geetest.com
@@ -8094,6 +8186,7 @@
 .secretmedia.s3.amazonaws.com
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
+.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -8480,6 +8573,7 @@
 .splashqqlive.gtimg.com
 .splitbee.io
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spot.im
@@ -8706,6 +8800,7 @@
 .supersonicads.com
 .support-portal.qualtrics.com
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -8923,6 +9018,7 @@
 .titan-mt.pinduoduo.com
 .titan-ws.pinduoduo.com
 .titan.pinduoduo.com
+.titkoshirek.wordpress.com
 .tivan.naver.com
 .tj.b.qq.com
 .tj.kugou.com
@@ -8995,6 +9091,7 @@
 .toolbar.baidu.com
 .toolbar.google.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .toots-a.akamaihd.net
@@ -9003,6 +9100,7 @@
 .top.h.qhimg.com
 .top.mail.ru
 .top.taobao.com
+.top5.mail.ru
 .topapi.cp12.ott.cibntv.net
 .toruk.gds.tanx.com
 .tos-cn-beijing.volces.com
@@ -9154,6 +9252,7 @@
 .tt.nvidia.com
 .ttpsdk.info
 .tttppp.oss-cn-guangzhou.aliyuncs.com
+.tudnodkel.blogspot.com
 .tui.gtimg.com
 .tui.taobao.com
 .tui.weibo.com
@@ -9285,6 +9384,7 @@
 .unisalutespa.data.adobedc.net
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .unstat.baidu.com
@@ -9414,6 +9514,7 @@
 .vegameapi.volces.com
 .vegamemon.volces.com
 .vegslb.com
+.vendorlist.consensu.org
 .vendors.privacymanager.io
 .venezia-measurements.s3-external-1.amazonaws.com
 .veta.naver.com
@@ -9426,6 +9527,7 @@
 .vhotwsh.video.qq.com
 .vi.xiaohongshu.com
 .via.intercom.io
+.viagra-pill.blogspot.com
 .vidazoo.com
 .video-ad.sm.cn
 .video-ak.cdn.spotify.com
@@ -9448,6 +9550,7 @@
 .views.hulu.com.akadns.net
 .viglink.com
 .viking.com.data.adobedc.net
+.vilaghelyzete.blogspot.com
 .virusinfo-cloudscan-cn.heytapmobi.com
 .visio-telemetry.officeapps.live.com
 .visit.webhosting.yahoo.com
@@ -9464,6 +9567,8 @@
 .vod-box.bz.mgtv.com
 .vodafonein.data.adobedc.net
 .vodus-api-serverless.azurewebsites.net
+.vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .volcsiriusbd.com
@@ -9646,6 +9751,7 @@
 .www-googletagmanager.l.google.com
 .www.addtoany.com
 .www.i.cdn.cnn.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
